# vsteg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tech.md
data/: README.md  decoy.txt  payload-sample.txt
scripts/: train_ml_detector.py
tests/: test_compare.py  test_container.py  test_detect.py  test_ecc.py  test_ml_stats.py  test_reveal.py  test_roundtrip.py  test_sniff.py
vsteg/: __init__.py  __main__.py  cli.py  compare.py  container.py  ecc.py  probe.py  reveal.py  sniff.py  web.py
vsteg/detect/: __init__.py  dct_stats.py  ffmpeg_consistency.py  ml_ensemble.py  mp4_forensics.py  report.py  self_probe.py  signatures.py  statistics.py  structure.py  video_anomaly.py
vsteg/detect/models/: video_stego_rf.joblib
vsteg/methods/: __init__.py  append.py  dct.py  lsb.py
vsteg/web_static/: app.js  index.html  styles.css
